# goguessr

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/client/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/client/src/: App.svelte  app.css  main.ts  vite-env.d.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/components/: Banner.svelte  GameHud.svelte  GuessMap.svelte  GuessMapGoogle.svelte  ModeSelector.svelte  MultiRoundResult.svelte  MultiStandings.svelte  PanoramaView.svelte  PlayerList.svelte  RoundResult.svelte  Spinner.svelte  Standings.svelte
apps/client/src/lib/: config.ts  format.ts
apps/client/src/lib/game/: geo.test.ts  geo.ts  index.ts  scoring.test.ts  scoring.ts  session.test.ts  session.ts  types.ts
apps/client/src/lib/map/: google.ts  style.ts
apps/client/src/lib/mapillary/: panorama.ts
apps/client/src/lib/net/: client.ts
apps/client/src/lib/net/bindings/: ClientMessage.ts  GameMode.ts  GameSettings.ts  GuessResult.ts  Phase.ts  Player.ts  ServerMessage.ts  Standing.ts  index.ts
apps/client/src/lib/pool/: index.ts
apps/client/src/lib/storage/: index.ts  tauri.ts
apps/client/src/lib/stores/: multiplayer.svelte.ts  router.svelte.ts  settings.svelte.ts  solo.svelte.ts
apps/client/src/routes/: Lobby.svelte  Menu.svelte  MultiGame.svelte  Settings.svelte  SoloGame.svelte
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs  pool.rs  protocol.rs  rng.rs  room.rs  scoring.rs  ws.rs
apps/server/tests/: scoring_vectors.rs
data/: locations.sample.json  scoring-vectors.json
tools/: gen-icon.mjs  gen-scoring-vectors.mjs
tools/pool-builder/: package.json  seeds.json
tools/pool-builder/src/: build-pool.ts
