[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Authoritative WebSocket game server for geo-guess multiplayer."

[lib]
name = "server"
path = "src/lib.rs"

# The binary (Axum WebSocket server) is src/main.rs.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
