[package]
name = "geo-guess"
version = "0.1.0"
description = "GeoGuess — a GeoGuessr-style game (Tauri shell)"
authors = ["geo-guess contributors"]
edition = "2021"

# Standalone workspace so the Tauri crate's heavy dependency tree does not slow
# down `cargo test/clippy` for apps/server.
[workspace]

[lib]
# Must end in `_lib` and expose a `cdylib`/`staticlib` for the Android/iOS build.
name = "geoguess_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
